force-app/main/default/objects/Followup_Question__c/Followup_Question__c.object-meta.xml
<CustomObject>
    <label>Followup Question</label>
    <nameField>
        <displayFormat>FQ-{0000000}</displayFormat>
        <label>Followup Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Followup Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>