force-app/main/default/objects/Followup_Question__c/fields/Child_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Child_Hierarchy__c</fullName>
    <label>Child Hierarchy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>