force-app/main/default/objects/Followup_Question__c/fields/Child_Question__c.field-meta.xml
<CustomField>
    <fullName>Child_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Question</label>
    <referenceTo>Kinetic_Question__c</referenceTo>
    <relationshipLabel>Followup Questions</relationshipLabel>
    <relationshipName>Followup_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>