force-app/main/default/objects/Followup_Question__c/fields/Child_Question_Text__c.field-meta.xml
<CustomField>
    <fullName>Child_Question_Text__c</fullName>
    <label>Child Question Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>