force-app/main/default/objects/Followup_Question__c/fields/Parent_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Parent_Hierarchy__c</fullName>
    <label>Parent Hierarchy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>