force-app/main/default/objects/Followup_Question__c/fields/Parent_Option_Value__c.field-meta.xml
<CustomField>
    <fullName>Parent_Option_Value__c</fullName>
    <label>Parent Option Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>