force-app/main/default/objects/Followup_Question__c/fields/Parent_Question__c.field-meta.xml
<CustomField>
    <fullName>Parent_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Question</label>
    <referenceTo>Kinetic_Question__c</referenceTo>
    <relationshipLabel>Followup Questions (Parent Question)</relationshipLabel>
    <relationshipName>Followup_Questions1</relationshipName>
    <type>Lookup</type>
</CustomField>